--- a/grafana/provisioning/dashboards/dashboard.yaml
+++ b/grafana/provisioning/dashboards/dashboard.yaml
@@ -1,10 +1,23 @@
+  #apiVersion: 1
+  #providers:
+  #  - name: 'Node Exporter Dashboards'
+  #    orgId: 1
+  #    folder: ''
+  #    type: file
+  #    disableDeletion: false
+  #    updateIntervalSeconds: 30
+  #    options:
+  #      path: /etc/grafana/provisioning/dashboards
+  
 apiVersion: 1
+
 providers:
-  - name: 'Node Exporter Dashboards'
+  - name: 'windows'
     orgId: 1
-    folder: ''
+    folder: 'Windows'
     type: file
     disableDeletion: false
-    updateIntervalSeconds: 30
+    updateIntervalSeconds: 10
     options:
       path: /etc/grafana/provisioning/dashboards
+
