--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -2,9 +2,9 @@ global:
   scrape_interval: 15s
 
 scrape_configs:
-  - job_name: 'node-exporter'
+  - job_name: 'windows'
     static_configs:
-      - targets: ['172.17.0.1:9100']
+      - targets: "WINDOWS_IP:9182"
 
   - job_name: 'prometheus'
     static_configs:
